CHATS_SIT/force-app/main/default/objects/batchsit_t_prim_actv_hist__x.object
<CustomObject>
    <description>batchsit$t_prim_actv_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_prim_actv_hist</externalName>
    <fields>
        <fullName>cde_type_actv__c</fullName>
        <description>cde_type_actv</description>
        <externalDeveloperName>cde_type_actv</externalDeveloperName>
        <label>Active Type Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_begin_actv_prim__c</fullName>
        <description>dte_begin_actv_prim</description>
        <externalDeveloperName>dte_begin_actv_prim</externalDeveloperName>
        <label>Primary Active Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_actv_prim__c</fullName>
        <description>dte_end_actv_prim</description>
        <externalDeveloperName>dte_end_actv_prim</externalDeveloperName>
        <label>Primary Active End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_prim_actv__c</fullName>
        <description>idn_prim_actv</description>
        <externalDeveloperName>idn_prim_actv</externalDeveloperName>
        <label>Primary Activity ID</label>
        <length>50</length>
        <referenceTargetField>T_PRIM_ACTV__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_PRIM_ACTV__c</referenceTo>
        <relationshipLabel>Primary Activity Legacy History</relationshipLabel>
        <relationshipName>Primary_Activity_History</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_prim_actv_hist__c</fullName>
        <description>idn_prim_actv_hist</description>
        <externalDeveloperName>idn_prim_actv_hist</externalDeveloperName>
        <label>Primary Activity ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>current Record Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nam_prim_actv__c</fullName>
        <description>nam_prim_actv</description>
        <externalDeveloperName>nam_prim_actv</externalDeveloperName>
        <label>Primary Activity ID Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Primary Activity History</label>
    <pluralLabel>Primary Activity History</pluralLabel>
</CustomObject>